Hay error en popUp

--- a/app/src/main/res/layout/activity_verbos.xml
+++ b/app/src/main/res/layout/activity_verbos.xml
@@ -18,6 +18,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+
+      <TableLayout
+          android:id="@+id/table_layout_aprende"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+    </LinearLayout>
   </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
