Animación de boton "practica" lista

--- a/app/src/main/res/drawable/ovalo.xml
+++ b/app/src/main/res/drawable/ovalo.xml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <size
-        android:height="50dp"
-        android:width="150dp"></size>
-    <corners
-        android:radius="25dp"></corners>
-    <stroke
-        android:width="10px"
-        android:color="@color/purple_200"></stroke>
-    <solid
-        android:color="#00FFFFFF"></solid>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false" >
+        <shape>
+            android:shape="rectangle">
 
 
-</shape>
+            <size
+                android:height="50dp"
+                android:width="150dp"></size>
+            <corners
+                android:radius="25dp"></corners>
+            <stroke
+                android:width="10px"
+                android:color="@color/purple_200"></stroke>
+            <solid
+                android:color="#00FFFFFF"></solid>
+
+        </shape>
+    </item>
+    <item android:state_pressed="true" >
+        <shape>
+            android:shape="rectangle">
+
+
+            <size
+                android:height="50dp"
+                android:width="150dp"></size>
+            <corners
+                android:radius="25dp"></corners>
+            <stroke
+                android:width="10px"
+                android:color="#500F80AA"></stroke>
+            <solid
+                android:color="#00FFFFFF"></solid>
+
+        </shape>
+    </item>
+
+</selector>
