--- a/app/src/main/res/layout/layout_target.xml
+++ b/app/src/main/res/layout/layout_target.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ovalo"
+            android:onClick="practica"
             android:text="Practica"
             android:textColor="@drawable/button_text_color_practica"
             app:layout_constraintBottom_toBottomOf="parent"
