--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,11 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+
+
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="300dp"
+            android:background="@color/white">
 
             <ImageView
                 android:id="@+id/image_item"
@@ -37,6 +41,7 @@
 
             <TextView
                 android:id="@+id/desc"
+                android:textColor="#262626"
                 android:layout_below="@id/title"
                 android:layout_marginTop="3dp"
                 android:layout_marginLeft="16dp"
@@ -46,7 +51,8 @@
                 android:ellipsize="end"
                 android:text="Description"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
         </RelativeLayout>
 
