--- a/app/src/main/res/layout/fragment_l_s_c.xml
+++ b/app/src/main/res/layout/fragment_l_s_c.xml
@@ -1,28 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ControladorTab.LSC">
+    tools:context=".NoSeUsan.BasesSwipe.PageChanger">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager_LSC"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:foregroundGravity="center"
+        android:overScrollMode="never">
 
-    <ScrollView
+    </androidx.viewpager.widget.ViewPager>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/LinealLayoutLSC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.952"
+            tools:layout_editor_absoluteX="0dp">
 
-            <TableLayout
-                android:id="@+id/TableLayoutLSC"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/aprende_lsc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp"
+                android:layout_weight="1"
+                android:background="@drawable/round"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:text="Aprende"
+                android:textColor="#fff" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/practica_lsc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp"
+                android:layout_weight="1"
+                android:background="@drawable/round"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:text="Practica"
+                android:textColor="#fff" />
         </LinearLayout>
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+
+</RelativeLayout>
