--- a/app/src/main/res/drawable-v24/buttonroundcorrect.xml
+++ b/app/src/main/res/drawable-v24/buttonroundcorrect.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
-        <shape>
-            android:shape="rectangle">
-            <size
-                android:height="50dp"
-                android:width="150dp"></size>
-            <corners
-                android:radius="25dp"></corners>
-            <stroke
-                android:width="10px"
-                android:color="#8cf594"></stroke>
-            <solid
-                android:color="#FFFFFF"></solid>
+        <shape android:shape="rectangle">
+            <size android:height="50dp" android:width="150dp" />
+            <corners android:radius="25dp" />
+            <stroke android:width="10px" android:color="#8cf594" />
+            <solid android:color="#FFFFFF" />
         </shape>
 
     </item>
 
     <item android:state_pressed="true">
-                <shape>
-                    android:shape="rectangle">
-                    <size
-                        android:height="50dp"
-                        android:width="150dp"></size>
-                    <corners
-                        android:radius="25dp"></corners>
-                    <stroke
-                        android:width="10px"
-                        android:color="#500F80AA"></stroke>
-                    <solid
-                        android:color="#FFFFFF"></solid>
+        <shape android:shape="rectangle">
+            <size android:height="50dp" android:width="150dp" />
+            <corners android:radius="25dp" />
+            <stroke android:width="10px" android:color="#500F80AA" />
+            <solid android:color="#FFFFFF" />
 
-                </shape>
+        </shape>
     </item>
 </selector>
