--- a/app/src/main/res/layout/activity_aprende.xml
+++ b/app/src/main/res/layout/activity_aprende.xml
@@ -25,8 +25,8 @@
             <TableLayout
                 android:id="@+id/TableLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center|center_horizontal"/>
+                android:layout_height="15dp"
+                android:gravity="center|center_horizontal" />
 
         </LinearLayout>
     </ScrollView>
