Cambio de colores

--- a/app/src/main/res/layout/activity_botones_videos.xml
+++ b/app/src/main/res/layout/activity_botones_videos.xml
@@ -28,10 +28,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/round"
+            android:backgroundTint="@color/color1"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:text="Descubre"
             android:textColor="#fff"
+            android:textColorHighlight="#CDB4DB"
+            android:textColorLink="#FFFFFF"
+            android:textCursorDrawable="@drawable/round"
+            app:backgroundTint="#68ABEA"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
