--- a/app/src/main/res/layout/activity_palabra_videos.xml
+++ b/app/src/main/res/layout/activity_palabra_videos.xml
@@ -10,7 +10,6 @@
         android:id="@+id/chosen_word_palabra_videos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,15 +19,16 @@
         app:layout_constraintVertical_bias="0.171" />
 
     <LinearLayout
-        android:layout_width="408dp"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="370dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.743">
+        app:layout_constraintVertical_bias="0.753">
 
         <TableRow
             android:layout_width="match_parent"
