--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#0F80AA</color>
+    <color name="purple_200">#A2D2FF</color>
     <color name="purple_500">#0F80AA</color>
-    <color name="purple_700">#0B5A77</color>
+    <color name="purple_700">#354655</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color1">#cdb4db</color>
-    <color name="color2">#d8b1e6</color>
-    <color name="color3">#bde0fe</color>
-    <color name="color4">#a2d2ff</color>
+    <color name="color1">#80DFB5F6</color>
+    <color name="color2">#A2D2FF</color>
+    <color name="color3">#809FECC4</color>
+    <color name="color4">#80F3BFAC</color>
 
 
 
