Cambio de colores

--- a/app/src/main/res/drawable-v24/buttonroundcorrect.xml
+++ b/app/src/main/res/drawable-v24/buttonroundcorrect.xml
@@ -12,7 +12,7 @@
                 android:width="10px"
                 android:color="#8cf594"></stroke>
             <solid
-                android:color="#FFFFFF"></solid>
+               ></solid>
         </shape>
 
     </item>
