--- a/app/src/main/res/drawable/button_animator_practica.xml
+++ b/app/src/main/res/drawable/button_animator_practica.xml
@@ -12,7 +12,7 @@
                 android:width="10px"
                 android:color="@color/purple_200"></stroke>
             <solid
-                android:color="#FFFFFF"></solid>
+                ></solid>
         </shape>
 
     </item>
