--- a/app/src/main/res/drawable-v24/buttonroundempty.xml
+++ b/app/src/main/res/drawable-v24/buttonroundempty.xml
@@ -12,7 +12,7 @@
                 android:width="10px"
                 android:color="#f5426c"></stroke>
             <solid
-                android:color="#FFFFFF"></solid>
+                ></solid>
         </shape>
 
     </item>
