--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -30,6 +30,9 @@
 
         <EditText
             android:id="@+id/nombreEditText"
+            app:backgroundTint="@color/black"
+            android:textColor="@color/black"
+            android:textColorHint="#80454444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -37,7 +40,10 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            app:backgroundTint="@color/black"
             android:id="@+id/apellidosEditText"
+            android:textColor="@color/black"
+            android:textColorHint="#80454444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -45,7 +51,10 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            app:backgroundTint="@color/black"
             android:id="@+id/email_log_in"
+            android:textColor="@color/black"
+            android:textColorHint="#80454444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -53,7 +62,10 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            app:backgroundTint="@color/black"
             android:id="@+id/password_log_in"
+            android:textColor="@color/black"
+            android:textColorHint="#80454444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -61,7 +73,10 @@
             android:inputType="textPassword" />
 
         <EditText
+            app:backgroundTint="@color/black"
             android:id="@+id/confirm_password"
+            android:textColor="@color/black"
+            android:textColorHint="#80454444"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
