gui de user info mejorada

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,40 +17,57 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bgpic" />
 
-    <TableRow
-        android:id="@+id/tableRow3"
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Bienvenid@ a ...."
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.306" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.525">
+        app:layout_constraintVertical_bias="0.615">
 
         <Button
             android:id="@+id/inicioSesion"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:background="@drawable/round"
             android:backgroundTint="@color/color1"
             android:onClick="irInicioSesion"
-            android:text="@string/iniciar_sesion"
+            android:text="Ya tengo una cuenta"
             app:backgroundTint="#ECB09A" />
 
         <Space
-            android:layout_width="20dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
 
         <Button
             android:id="@+id/registro"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:background="@drawable/round"
             android:backgroundTint="#80A2D2FF"
             android:onClick="irIRegistro"
-            android:text="@string/registro"
+            android:text="Deseo registrarme"
             app:backgroundTint="@color/color2" />
-    </TableRow>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
