--- a/app/src/main/res/layout/activity_video_palabras.xml
+++ b/app/src/main/res/layout/activity_video_palabras.xml
@@ -9,6 +9,7 @@
 
     <FrameLayout
         android:id="@+id/video_view_container"
+        android:adjustViewBounds="true"
         android:layout_width="388dp"
         android:layout_height="268dp"
         android:background="@drawable/background_video_viewer"
@@ -20,6 +21,7 @@
         app:layout_constraintVertical_bias="0.193">
 
         <VideoView
+            android:adjustViewBounds="true"
             android:id="@+id/video_en_video_palabras"
             android:layout_width="357dp"
             android:layout_height="210dp"
