--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -1,88 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ControladorTab.UserInfo">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView3"
+        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/userinfo3" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="258dp"
+            android:layout_height="258dp"
+            android:indeterminateOnly="false"
+            android:progressDrawable="@drawable/img_circle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Nombre" />
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.654">
 
-        <TextView
-            android:id="@+id/text_view_nombre_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            <TextView
+                android:id="@+id/text_view_nombre_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold|italic"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            <TextView
+                android:id="@+id/text_view_apellidos_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold|italic"
+                />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Apellidos" />
+            <Button
+                android:layout_width="200dp"
+                android:id="@+id/pressButton"
+                android:layout_height="50dp"
+                android:text="press"/>
 
-        <TextView
-            android:id="@+id/text_view_apellidos_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="Correo electrónico"
+                android:textColor="#757474" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            <TextView
+                android:id="@+id/view_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Correo electrónico" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
-        <TextView
-            android:id="@+id/view_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|left"
+                android:text="Fecha del último ingreso"
+                android:textColor="#757474" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            <TextView
+                android:id="@+id/view_last_login_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Fecha del último ingreso" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
 
-        <TextView
-            android:id="@+id/view_last_login_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="100dp" />
-
-        <Button
-            android:id="@+id/logOutUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cerrar sesión" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/logOutUser"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round"
+                android:text="Cerrar sesión"
+                app:backgroundTint="#B899CA" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
